ajusted games width to their new place, fixed bug with time counting in chimp, fixed some text-align things

--- a/src/ChimpRace/Game.module.css
+++ b/src/ChimpRace/Game.module.css
@@ -2,11 +2,12 @@
 
 .gameTable {
     background-color: white;
-    border: solid 1px black;
+    border: solid 0px black;
     border-radius: 20px;
+    box-shadow: 0 0 3px lightgray;
     margin: auto;
     /* min-width: 540px; */
-    width: 60%;
+    width: 75%;
     /* max-height: 400px; */
     height: fit-content;
     padding: 20px;
@@ -15,6 +16,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
 .gameHeader{
@@ -33,6 +35,7 @@
     font-size: 20px;
     top: 20px;
     left: 20px;
+    text-align: center;
 }
 
 .gameName {
@@ -57,6 +60,7 @@
     top: 10px;
     right: -10%;
     user-select: none;
+    text-align: center;
 }
 
 .clue:hover{
@@ -74,6 +78,7 @@
     color: black;
     font-size: 20px;
     width: 100px;
+    text-align: center;
     /* margin-bottom: 15px; */
 }
 
@@ -113,6 +118,7 @@
     color: black;
     font-size: 20px;
     display: block;
+    text-align: center;
     margin: 0;
 }
 
@@ -190,7 +196,9 @@
 
 .buttonLike {
     box-shadow: none;
-    border: solid 1px black;
+    border: solid 1px gray;
+    /* box-shadow: 0 0 5px gray; */
+
     border-radius: 10px;
 }
 
