--- a/src/MemoryGame/card.module.css
+++ b/src/MemoryGame/card.module.css
@@ -3,7 +3,7 @@
     border: solid 0;
     border-radius: 20px;
     margin: auto;
-    width: 60%;
+    width: 75%;
     min-width: 60%;
     min-height: 100px;
     height: fit-content;
